[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alap"
version = "0.1.0"
description = "Alap expression parser for Python — resolve link expressions server-side"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Daniel Smith" }]
keywords = ["alap", "expression-parser", "links", "menu"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://alap.info"
Repository = "https://github.com/DanielSmith/alap-python"

[tool.setuptools.packages.find]
where = ["."]
include = ["alap*"]

[tool.setuptools.package-dir]
alap = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
